# domains

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
domains/aggregate/: CMakeLists.txt  command.hpp  event_source.hpp  event_store.hpp
domains/event_source/: CMakeLists.txt  commit.hpp  commit_attempt.hpp  event_committer.hpp  event_range.hpp  event_store.hpp  event_stream.hpp
domains/messaging/: CMakeLists.txt  buffer.hpp  byte.hpp  decoder.hpp  dispatcher.hpp  encoding.hpp  messaging_traits.hpp  protocol.hpp  router.hpp  translator.hpp
domains/utils/: CMakeLists.txt  any.hpp  call_traits.hpp  concepts.hpp  function_traits.hpp  memory_resource.hpp  optional.hpp  parameter_pack.hpp  string_view.hpp  type_traits.hpp
examples/chess/: board.hpp  color.hpp  error.hpp  locationl.hpp  piece.hpp
examples/messaging/: simple_parser.cpp
src/main/cpp/: CMakeLists.txt
src/main/cpp/skizzay/domains/: aggregate_root.h  aggregate_root_store.h  command_handler.h  commit.h  concepts.h  concurrency_collision.h  entity.h  entity_store.h  event.h  event_stream.h  event_stream_factory.h  event_stream_head.h  generator.h  null_mutex.h  sequence.h  tag_dispatch.h  validated_event_range.h  value_object.h
src/main/cpp/skizzay/domains/aggregate/: CMakeLists.txt  aggregate_root.h  entity.h  entity.hpp  entity_store.h  event.hpp  snapshot_factory.hpp
src/main/cpp/skizzay/domains/event_source/: CMakeLists.txt  commit.h  commit_range.hpp  concepts.h  concurrency_collision.h  event.h  event_provider.hpp  event_source.hpp  event_store.h  event_stream.h  event_stream.hpp  event_stream_factory.h  generator.h  null_mutex.h  sequence.h  snapshot_provider.hpp  tag_dispatch.h
src/main/cpp/skizzay/domains/event_source/inmemory/: event_store.h  event_stream.h  event_stream_factory.h
src/main/cpp/skizzay/domains/inmemory/: entity_store.h  event_stream.h  event_stream_factory.h
src/main/cpp/skizzay/domains/messaging/: CMakeLists.txt  decoder.hpp  dispatcher.hpp  encoding.hpp  messaging_traits.hpp  translator.hpp
src/main/cpp/skizzay/domains/utils/: detected.hpp  null_mutex.hpp  type_provider.hpp  type_traits.hpp
src/skizzay/domains/cqrs/: aggregate.h
src/skizzay/domains/event_sourcing/: commit.h  commit_attempt.h  commit_header.h  commit_result.h  commit_sequence.h  commit_store.h  domain.h  event.h  event_header.h  event_stream.h  event_stream_provider.h  hook.h  identifier.h  optimistic_event_store.h  optimistic_event_stream.h  range_holder.h  result_holder.h  sequence.h  snapshot.h  snapshot_header.h  stream_head.h  stream_version.h  timestamp.h  traits.h
src/skizzay/domains/event_sourcing/concepts/: tag.h  timestamp.h
src/test/cpp/: CMakeLists.txt
src/test/cpp/skizzay/domains/: CMakeLists.txt  aggregate_root.cpp  commit.cpp  concepts.cpp  entity.cpp  entity_store.cpp  event.cpp  event_stream.cpp  sequence.cpp  validated_event_range.cpp
src/test/cpp/skizzay/domains/aggregate/: CMakeLists.txt  aggregate_root.cpp  entity.cpp  entity_store.cpp
src/test/cpp/skizzay/domains/event_source/: CMakeLists.txt  commit.cpp  concepts.cpp  event.cpp  event_stream.cpp  sequence.cpp
src/test/cpp/skizzay/domains/event_source/inmemory/: event_store.cpp  event_stream_factory.cpp
src/test/cpp/skizzay/domains/inmemory/: event_stream_factory.cpp
src/test/cpp/skizzay/domains/messaging/: buffer.cpp  encoding.cpp  translator.cpp
src/test/cpp/skizzay/domains/utils/: CMakeLists.txt  any.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/cqrs/: CMakeLists.txt
test_package/event_sourcing/: CMakeLists.txt
test_package/event_sourcing/integration/: optimistic_event_store.t.cpp
test_package/event_sourcing/unit/: commit_store.t.cpp  hook.t.cpp
unit_tests/: CMakeLists.txt
unit_tests/domains/aggregate/: CMakeLists.txt  event_source.cpp
unit_tests/domains/event_sourcing/: commit_store.t.cpp  event.t.cpp  event_header.t.cpp  hook.t.cpp  identifier.t.cpp  range_holder.t.cpp  sequence.t.cpp
unit_tests/domains/messaging/: CMakeLists.txt  base_fixture.hpp  buffer.cpp  decoder.cpp  dispatcher.cpp  encoding.cpp  protocol.cpp  translator.cpp
unit_tests/domains/utils/: CMakeLists.txt
unit_tests/skizzay/domains/aggregate/: CMakeLists.txt
unit_tests/skizzay/domains/event_source/: CMakeLists.txt  event_source.cpp
unit_tests/skizzay/domains/messaging/: CMakeLists.txt  main.cpp
