ADD_EXECUTABLE(aggregate_tests
   main.cpp)
TARGET_INCLUDE_DIRECTORIES(aggregate_tests PRIVATE
   ${PROJECT_SOURCE_DIR}
   ${CONAN_INCLUDE_DIRS_CATCH})
TARGET_LINK_LIBRARIES(aggregate_tests PRIVATE
   ${CONAN_LIBS_DIRS_KERCHOW}
   ${CONAN_LIBS_KERCHOW}
   ${CONAN_LIBS_DIRS_CATCH}
   ${CONAN_LIBS_CATCH})
